[gd_scene load_steps=2 format=3 uid="uid://4xts0ha85fja"]

[ext_resource type="Script" path="res://addons/table_data_editor/src/table_data_editor/table_edit/edit_box_window/edit_box_window.gd" id="1_qj0ea"]

[node name="popup_edit_box" type="Control"]
visible = false
layout_mode = 3
anchors_preset = 0
size_flags_horizontal = 0
size_flags_vertical = 0
mouse_filter = 2
script = ExtResource("1_qj0ea")
box_size = Vector2(200, 120)

[node name="edit_box" type="TextEdit" parent="."]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 30)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 200.0
offset_bottom = 120.0
grow_horizontal = 2
grow_vertical = 2
wrap_mode = 1

[node name="scale_rect" type="Control" parent="edit_box"]
unique_name_in_owner = true
layout_mode = 1
anchor_left = 0.996
anchor_top = 0.987
anchor_right = 0.996
anchor_bottom = 0.987
offset_left = -0.200012
offset_top = -0.440002
offset_right = 7.79999
offset_bottom = 7.56
mouse_default_cursor_shape = 12

[connection signal="gui_input" from="edit_box" to="." method="_on_edit_box_gui_input"]
[connection signal="resized" from="edit_box" to="." method="_on_edit_box_resized"]
